# ipstuff

./: Cargo.toml  Optimizations.md  README.md
.github/workflows/: tests.yml
src/: addrs.rs  bitwise.rs  impl_serde.rs  lib.rs  mask.rs  masked.rs  network.rs  ops.rs  se.rs
src/tests/: ipbitwise.rs  ipmask.rs  mod.rs
tests/: ipbitwise.rs  ipmask.rs  serde.rs
