[package]
name = "ipstuff"
version = "0.1.4"
authors = ["Tyler Ruckinger"]
edition = "2018"

description = "IP structures and utilities"
documentation = "https://docs.rs/ipstuff"
repository = "https://github.com/TyPR124/ipstuff"
keywords = ["ip", "network", "subnet"] # 2 more?

readme = "README.md"
license = "MIT OR Apache-2.0"

[badges.maintenance]
status = "actively-developed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
